--- a/src/componentcss/Register.css
+++ b/src/componentcss/Register.css
@@ -2,25 +2,34 @@
 .MinContainer
 {
    
-    height: 75vh;
+   
+    height: 70vh;
     display:flex;
     justify-content:center;
     align-items: center;
-    border:10px solid rgb(228, 69, 69);
-    border-radius: 90px;
-    
     
 }
 .Formm
 {
-    background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
-    display: flex;
+    
+     display: flex;
     flex-direction:column;
      align-items:center;
-     padding:3rem;
-     border:10px solid white;
-     border-radius: 90px;
-     height: 70vh;
+     padding:2rem;
+     background-color: #333333;
+     transition: all 0.3s ease;
+
+
+     
+     border-radius: 70px;
+     height: 60vh;
+     
+     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+.Formm:hover
+{
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 
